# spreadsheet-to-luau

./: .gitignore  Cargo.toml  README.md  foreman.toml  requirements.txt  test.json  test.sh  xlsxtest.luau
.github/workflows/: release.yml
scripts/: activate_env.sh  build_env.sh  requirements.sh  test.sh  test_build.sh  text_build.sh  to_exe.sh
src/: __init__.py  dataretriever.py  luau.py  main.py  main.rs  setup.py
test/in/: test.csv  test.xlsx
